# MyDemo

c_c++_demo/: gdb_setting_launch.json
c_c++_demo/c++_demo/: CMakeLists.txt
c_c++_demo/c++_demo/src/: main.cpp
c_c++_demo/c++_demo/utils/: log_print.h
c_c++_demo/c_demos/: CMakeLists.txt  build_linux_x86.sh
c_c++_demo/c_demos/src/: thread_creation_demo.c
c_c++_demo/src/: main.c
opecl_zeroCopyDemo_yuv2rgb/: AHardwareBuffer_wrapper.cc  CMakeLists.txt  drm_alloc.cc  main.cc  opencl_wrapper.cc
python/: ImageConv_cv.py  ImageResized.py  convert2rknn.py  lstm_pytorch.py
python_demo/: ImageResized.py  password_generator.py
sample_demo/opencl_zeroCopyDemo_yuv2rgb/: AHardwareBuffer_wrapper.h  build_android_ndk_arm64-v8a.sh  build_linux_aarch64.sh  drm_alloc.h  opencl_wrapper.h
tools/python/: utils.py
tools/useful_configs/: launch.json
